# onboarding-financecrewai

./: .gitignore  CLAUDE.md  Pesquisa_Onboarding_Self_Service_CollectAI.docx  Pesquisa_Onboarding_Self_Service_CollectAI_v2.docx  competitive_analysis_collectai.md  pesquisa_onboarding_self_service.md  pesquisa_onboarding_self_service_v2.md  railway.toml
backend/: .dockerignore  .env.example  Dockerfile  cli_test.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: orm.py  schemas.py
backend/app/prompts/: agent_generator.py  enrichment.py  interview.py  simulation.py  web_research.py
backend/app/routers/: agent.py  audio.py  enrichment.py  interview.py  sessions.py  simulation.py
backend/app/services/: agent_generator.py  enrichment.py  interview_agent.py  simulation.py  transcription.py  web_research.py
backend/app/utils/: url_validation.py
backend/tests/: conftest.py  test_agent_config.py  test_agent_generator.py  test_audio.py  test_auth.py  test_avatar.py  test_enrichment.py  test_health.py  test_integration.py  test_interview.py  test_onboarding_report.py  test_rate_limit.py  test_sessions.py  test_simulation.py  test_url_validation.py  test_web_research.py
docs/: PRD.md  SUMMARY.md  progress.md  progress_archive.md  tasks.md  tasks_archive.md  tech_design.md
frontend/: CLAUDE.md
frontend/docs/: DEV_ENVIRONMENT.md  PRD.md  SUMMARY.md  progress.md  tasks.md  tech_design.md
